fix: use black bg behind black bg image

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,9 +14,8 @@
 }
 
 body {
-  background: #0b0b0c;
   color: rgba(255, 255, 255, 0.87);
-  background: url("/bg.svg") no-repeat top center fixed;
+  background: #0b0b0c url("/bg.svg") no-repeat top center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
